@@ -1,0 +1,71 @@
+/**   
+ * License Agreement for OpenSearchServer
+ *
+ * Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
+ * 
+ * http://www.open-search-server.com
+ * 
+ * This file is part of OpenSearchServer.
+ *
+ * OpenSearchServer is free software: you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ * OpenSearchServer is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with OpenSearchServer. 
+ *  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
+package com.jaeksoft.searchlib.scheduler.task;
+
+import java.io.IOException;
+
+import com.jaeksoft.searchlib.Client;
+import com.jaeksoft.searchlib.ClientCatalog;
+import com.jaeksoft.searchlib.SearchLibException;
+import com.jaeksoft.searchlib.config.Config;
+import com.jaeksoft.searchlib.scheduler.TaskAbstract;
+import com.jaeksoft.searchlib.scheduler.TaskLog;
+import com.jaeksoft.searchlib.scheduler.TaskProperties;
+import com.jaeksoft.searchlib.scheduler.TaskPropertyDef;
+
+public class TaskFlushCrawlCache extends TaskAbstract {
+
+	@Override
+	public String getName() {
+		return "Crawl cache - purge";
+	}
+
+	@Override
+	public TaskPropertyDef[] getPropertyList() {
+		return null;
+	}
+
+	@Override
+	public String[] getPropertyValues(Config config, TaskPropertyDef propertyDef) {
+		return null;
+	}
+
+	@Override
+	public String getDefaultValue(Config config, TaskPropertyDef propertyDef) {
+		return null;
+	}
+
+	@Override
+	public void execute(Client client, TaskProperties properties,
+			TaskLog taskLog) throws SearchLibException {
+		try {
+			taskLog.setInfo("Crawl cache flush starts");
+			ClientCatalog.getCrawlCacheManager().flushCache(true);
+			taskLog.setInfo("Crawl cache flush done");
+		} catch (IOException e) {
+			throw new SearchLibException(e);
+		}
+	}
+}
